# pyo3-stub-gen

./: Cargo.toml
examples/pure/: pure.pyi
examples/pure/src/: lib.rs
pyo3-stub-gen/: Cargo.toml
pyo3-stub-gen-derive/src/: gen_stub.rs
pyo3-stub-gen-derive/src/gen_stub/: attr.rs  member.rs  pyclass.rs  pyfunction.rs  pymethods.rs
pyo3-stub-gen/src/: type_info.rs
pyo3-stub-gen/src/generate/: member.rs  module.rs  stub_info.rs
pyo3-stub-gen/src/stub_type/: builtins.rs  collections.rs  numpy.rs
