[package]
name = "pyo3-stub-gen"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
indexmap = { workspace = true, optional = true }
inventory.workspace = true
itertools.workspace = true
log.workspace = true
maplit.workspace = true
num-complex.workspace = true
numpy = { workspace = true, optional = true }
pyo3.workspace = true
serde.workspace = true
toml.workspace = true
ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git" }
ruff_python_formatter = { git = "https://github.com/astral-sh/ruff.git" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git" }
ruff_formatter = { git = "https://github.com/astral-sh/ruff.git" }
ruff_python_trivia = { git = "https://github.com/astral-sh/ruff.git" }

[dependencies.pyo3-stub-gen-derive]
version = "0.7.0"
path = "../pyo3-stub-gen-derive"

[features]
default = ["numpy"]
numpy = ["dep:numpy"]
